2008-07-03 Hans Boehm <Hans.Boehm@hp.com> (Really Thiemo Seufer)
	* src/atomic_ops/sysdeps/gcc/mips.h: Really add mips support,
	fixing a merge accident.

2008-05-30 Hans Boehm <Hans.Boehm@hp.com> (Really from various Debian
	contributors)
	* doc/Makefile.in, src/Makefile.in, src/atomic_ops/Makefile.in:
	Regenerate.

2008-05-30 Hans Boehm <Hans.Boehm@hp.com> (Really from various Debian
	contributors)
	* src/atomic_ops.h, src/atomic_ops/sysdeps/Makefile.am,
	src/atomic_ops/sysdeps/gcc/mips.h: Add mips support.
	* src/atomic_ops/sysdeps/gcc/m68k.h: Make test_and_set work
	on char, align AO_t.  Add cas, or.
	* src/atomic_ops/sysdeps/gcc/s390.h: Fix include paths.
	* src/atomic_ops/generalize.h: Fix AO_compare_and_swap_double_acquire.
	* Makefile.in, aclocal.m4, src/atomic_ops/sysdeps/Makefile.in,
	tests/Makefile.in: Regenerate.

2008-02-11 Hans Boehm <Hans.Boehm@hp.com>
	   (Really Ian Wienand & Debian maintainers)
	* src/atomic_ops/sysdeps/gcc/x86.h
	(AO_compare_double_and_swap_double_full): Correctly account for
	ebx usage with PIC.

2008-01-09 Hans Boehm <Hans.Boehm@hp.com>
	* src/atomic_ops/sysdeps/standard_ao_double_t.h: Let
	double_ptr_storage default to long long; define everywhere.

2008-01-08 Hans Boehm <Hans.Boehm@hp.com> (Really mostly Joerg Wagner)
	* src/atomic_ops/sysdeps/msftc/x86.h: Conditionally add
	compare_double_and_swap_double.

2008-01-06 Hans Boehm <Hans.Boehm@hp.com> (Really mostly Joerg Wagner)
	* src/atomic_ops/generalize.h: Add test_and_set generalizations,
	Add AO_double_compare_and_swap generalizations.
	* src/atomic_ops/sysdeps/armcc/arm_v6.h: New file.
	* src/atomic_ops/sysdeps/gcc/arm.h: Handle V6 and V7.
	* src/atomic_ops/sysdeps/gcc/x86.h,
	src/atomic_ops/sysdeps/{gcc,msftc}/x86_64.h: Conditionally add
	compare_double_and_swap_double, commented out for msftc.
	* src/atomic_ops/sysdeps/standard_ao_double_t.h:  Add
	double_ptr_storage field.

2008-01-03 Hans Boehm <Hans.Boehm@hp.com>
	(Merge from separate atomic_ops tree)