@@ -1,3 +1,7 @@
+2008-07-10 Hans Boehm <Hans.Boehm@hp.com>
+	* src/atomic_ops/sysdeps/gcc/m68k.h: Remove SMP-unsafe
+	AO_or_full, and let it be autogenerated instead.
+	
 2008-07-03 Hans Boehm <Hans.Boehm@hp.com> (Really Thiemo Seufer)
 	* src/atomic_ops/sysdeps/gcc/mips.h: Really add mips support,
 	fixing a merge accident.
